# c-logging

./: .gitignore  .markdownlint.json  CMakeLists.txt  DEVELOPER.md  Makefile  README.md  logging.h  logging.hpp  main.c  main_cpp20.cpp  test_compilation_commands.sh
.claude/: settings.local.json
.qwen/: QWEN.md
.qwen/commands/: speckit.analyze.md  speckit.clarify.md  speckit.constitution.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.specify/memory/: constitution.md
specs/001-cpp20-compatibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cpp20-compatibility/checklists/: requirements.md
specs/001-cpp20-compatibility/contracts/: api-contract.md
specs/002-fix-source-location/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-source-location/checklists/: requirements.md
specs/002-fix-source-location/contracts/: api-contract.md
src/include/: logging.h  logging.hpp
tests/: main.c  main_cpp20.cpp  simple_test.cpp  temp_test.cpp  test_fix_verification.cpp  test_source_location.cpp
